--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ classifiers = [
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11"
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12"
 ]
 dynamic = ["version"]
 
@@ -58,7 +59,8 @@ dev = [
     "twine",
     "sqlalchemy>=1.0.0",
     "pandas>=1.3.0",
-    "numpy>=1.24.0",
+    "numpy>=1.24.0,<1.26.0;python_version<\"3.9\"",
+    "numpy>=1.26.0;python_version>=\"3.9\"",
     "pyarrow>=7.0.0",
     "fastparquet>=0.4.0",
     "Jinja2>=3.1.0",
@@ -81,7 +83,7 @@ includes = ["pyathena", "pyathena/py.typed"]
 legacy_tox_ini = """
 [tox]
 isolated_build = true
-envlist = py{38,39,310,311},py{38,39,310,311}-sqla
+envlist = py{38,39,310,311,312},py{38,39,310,311,312}-sqla
 
 [gh-actions]
 python =
@@ -89,6 +91,7 @@ python =
     3.9: py39
     3.10: py310
     3.11: py311
+    3.12: py312
 
 [testenv]
 allowlist_externals =
@@ -102,7 +105,7 @@ passenv =
     TOXENV
     GITHUB_*
 
-[testenv:py{38,39,310,311}-sqla]
+[testenv:py{38,39,310,311,312}-sqla]
 commands =
     pdm install -v --dev
     make test-sqla
